# bazel-coverage-report

./: .gitignore  .travis.yml  BUILD  LICENSE.chromium  README.md  WORKSPACE  coverage_test.py  index-sort-f.html  index-sort-l.html  index.html  lint.sh  package.json
R/cran/: BUILD.BiocGenerics  BUILD.Rgraphviz  BUILD.graph
R/exampleA/: BUILD
R/exampleA/tests/: test.R
R/exampleB/: BUILD
R/exampleC/: BUILD
R/exampleC/R/: fn.R
R/testSrc/: BUILD  DESCRIPTION  NAMESPACE
R/testSrc/R/: fn.R
R/testSrc/src/: Makevars  fn.c  fn.h
R/testSrc/tests/: test.R
clang/: BUILD  bar.c  bar.h  foo.h  foo_test.c
go/bar/: BUILD.bazel  bar.go  bar.go.func-sort-c.html  bar.go.func.html  bar.go.gcov.html  bar_test.go  index-sort-f.html  index-sort-l.html  index.html
go/foo/: BUILD.bazel  foo.go  foo.go.func-sort-c.html  foo.go.func.html  foo.go.gcov.html  index-sort-f.html  index-sort-l.html  index.html
hchauvin_bazel_coverage_report/test/clang/: foo.c
hchauvin_bazel_coverage_report/test/js/: bar.ts  foo.ts
js/: BUILD  bar.ts  bar.ts.func-sort-c.html  bar.ts.func.html  bar.ts.gcov.html  bar_test.js  foo.ts.func-sort-c.html  foo.ts.func.html  foo.ts.gcov.html  foo_test.js  index-sort-f.html  index-sort-l.html  index.html
jvm/: BUILD
private/: BUILD  format.bzl  pylint_bin.py  requirements.txt
report/: BUILD  bazel.py  defs.bzl  generator.py  go.py  main.py  normalize.py  report.py
test/: BUILD  coverage.py  test_golden.sh  update_golden.sh
test/R/: BUILD
test/clang/: BUILD  bar_test.c
test/js/: BUILD  bar_test.js  foo_test.js
test/jvm/: BUILD
(+42 files in other folders)
